# agent-question

./: .env.example  .gitignore  Dockerfile.backend  Makefile  README.md  append_q06_q10.py  complete_enhance.py  docker-compose.separated.yml  docker-compose.yml  enterprise-ai-workflow-os-multi-agent.md  final_enhance.py  prompt.md  pyproject.toml
AI应用开发面试图解圣经V2026/: P0-大模型基础.md  P1-Transformer.md  P10-PostgreSQL.md  P11-Python.md  P12-AI系统设计.md  P13-Workflow.md  P14-LLMOps.md  P15-企业级项目实战.md  P16-AI系统设计Pro.md  P17-面试项目包装.md  P18-2026大厂高频面试题.md  P2-Prompt工程.md  P3-Embedding.md  P4-RAG.md  P5-Agent.md  P6-LangChain.md  P7-LangGraph.md  P8-MCP.md  P9-FastAPI.md  懂王-200题-分类图解版.md  懂王-200题.md
app/: __init__.py  main.py
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/api/: index.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: agent.ts  app.ts  index.ts  workflow.ts
frontend/src/types/: index.ts
frontend/src/views/: AgentMarketView.vue  AgentStudioView.vue  AgentView.vue  ApprovalView.vue  AuthCallbackView.vue  CostCenterView.vue  DashboardView.vue  EvaluationCenterView.vue  GovernanceView.vue  KnowledgeCenterView.vue  LLMManagementView.vue  LoginView.vue  MemoryView.vue  MonitorView.vue  NotFoundView.vue  PromptCenterView.vue  PromptManagementView.vue  ToolMarketplaceView.vue  ToolView.vue  WorkflowDetailView.vue  WorkflowView.vue
src/ai_workflow_os/: __init__.py
src/ai_workflow_os/agents/: __init__.py  (+9 more)
(+351 files in other folders)
