[tool.poetry]
name = "ai-workflow-os"
version = "0.1.0"
description = "企业级 AI 工作流多智能体平台"
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115"
uvicorn = { version = "^0.34", extras = ["standard"] }
pydantic = "^2.11"
temporalio = "^1.12"
aiokafka = "^0.12"
redis = "^6.2"
neo4j = "^5.28"
asyncpg = "^0.30"
pgvector = "^0.4"
langfuse = "^3.0"
opentelemetry-api = "^1.34"
opentelemetry-sdk = "^1.34"
httpx = "^0.28"
python-jose = { version = "^3.4", extras = ["cryptography"] }
passlib = { version = "^1.7", extras = ["bcrypt"] }
tenacity = "^9.1"
structlog = "^25.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-asyncio = "^1.0"
ruff = "^0.11"
mypy = "^1.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
